# poetryex

./: README.md
lib/dep1/: pyproject.toml
lib/dep1/tests/: test_dep.py
lib/dep2/: pyproject.toml
lib/dep2/tests/: test_dep2.py
lib/dep3/: pyproject.toml
lib/dep3/tests/: test_dep3.py
main/: pyproject.toml
main/tests/: test_main.py
