[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Yan Bussieres <yan.buss22@gmail.com>"]
# packages = [{ include = "../lib/dep3" }]

[tool.poetry.dependencies]
python = "^3.9"
dep2  = {path = "../lib/dep2"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
